--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,106 @@
-<!-- res/layout/activity_main.xml -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/statisticsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Статистика чтения"
-        android:textSize="18sp"
-        android:layout_margin="16dp"/>
-
-    <Button
-        android:id="@+id/buttonAddBook"
+    <EditText
+        android:id="@+id/editTextSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Добавить книгу"/>
+        android:hint="Поиск книги"
+        android:drawableLeft="@drawable/ic_search"
+        android:drawablePadding="4dp"
+        android:layout_margin="16dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/editTextSearch"
+        android:layout_marginTop="8dp">
+
+        <Button
+            android:id="@+id/buttonRead"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Прочитано"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/buttonInProcess"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="В процессе"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/buttonPlanned"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Планируется"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomMenu"
+        android:layout_below="@id/buttonInProcess"
+        android:layout_marginBottom="8dp"
+        tools:ignore="NotSibling" />
 
-    <Button
-        android:id="@+id/buttonStatistics"
+    <!-- Нижнее меню -->
+    <LinearLayout
+        android:id="@+id/bottomMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Показать статистику"/>
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:background="#ffffff"
+        android:elevation="8dp">
+
+        <Button
+            android:id="@+id/buttonListBooks"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Список книг"
+            android:backgroundTint="#5081E2"
+            android:textColor="@android:color/white"
+            android:drawableTop="@drawable/ic_book_list"
+            android:drawablePadding="4dp"
+            android:padding="8dp" />
+
+        <Button
+            android:id="@+id/buttonStatistics"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Статистика"
+            android:backgroundTint="#5081E2"
+            android:textColor="@android:color/white"
+            android:drawableTop="@drawable/ic_statistic"
+            android:drawablePadding="4dp"
+            android:padding="8dp" />
+    </LinearLayout>
+
+    <!-- Кнопка добавления книги -->
+    <ImageButton
+        android:id="@+id/buttonAddBook"
+        android:layout_width="69dp"
+        android:layout_height="69dp"
+        android:layout_above="@id/bottomMenu"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/circular_button_background"
+        android:src="@drawable/ic_add"
+        app:tint="@android:color/white" />
+</RelativeLayout>
