--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Поиск -->
     <EditText
         android:id="@+id/editTextSearch"
         android:layout_width="match_parent"
@@ -11,14 +13,20 @@
         android:hint="Поиск книги"
         android:drawableLeft="@drawable/ic_search"
         android:drawablePadding="4dp"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Поле поиска книг" />
 
+    <!-- Меню фильтров -->
     <LinearLayout
+        android:id="@+id/filterMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@id/editTextSearch"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Фильтры по статусу книг">
 
         <Button
             android:id="@+id/buttonRead"
@@ -27,7 +35,8 @@
             android:layout_weight="1"
             android:text="Прочитано"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:contentDescription="Показать прочитанные книги" />
 
         <Button
             android:id="@+id/buttonInProcess"
@@ -36,7 +45,8 @@
             android:layout_weight="1"
             android:text="В процессе"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:contentDescription="Показать книги в процессе чтения" />
 
         <Button
             android:id="@+id/buttonPlanned"
@@ -45,17 +55,22 @@
             android:layout_weight="1"
             android:text="Планируется"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:contentDescription="Показать запланированные книги" />
     </LinearLayout>
 
+    <!-- Список книг -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottomMenu"
-        android:layout_below="@id/buttonInProcess"
-        android:layout_marginBottom="8dp"
-        tools:ignore="NotSibling" />
+        android:layout_below="@id/filterMenu"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        android:importantForAccessibility="no"
+        tools:ignore="SpeakableTextPresentCheck"
+        tools:listitem="@layout/item_book" />
 
     <!-- Нижнее меню -->
     <LinearLayout
@@ -65,7 +80,9 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:background="#ffffff"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Нижнее меню">
 
         <Button
             android:id="@+id/buttonListBooks"
@@ -77,7 +94,8 @@
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_book_list"
             android:drawablePadding="4dp"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:contentDescription="Кнопка списка книг" />
 
         <Button
             android:id="@+id/buttonStatistics"
@@ -89,7 +107,8 @@
             android:textColor="@android:color/white"
             android:drawableTop="@drawable/ic_statistic"
             android:drawablePadding="4dp"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:contentDescription="Кнопка статистики" />
     </LinearLayout>
 
     <!-- Кнопка добавления книги -->
@@ -102,5 +121,6 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/circular_button_background"
         android:src="@drawable/ic_add"
+        android:contentDescription="Добавить новую книгу"
         app:tint="@android:color/white" />
 </RelativeLayout>
