--- a/app/src/main/res/layout/read.xml
+++ b/app/src/main/res/layout/read.xml
@@ -11,17 +11,21 @@
         android:padding="16dp">
 
         <!-- Кнопка назад -->
+
+        <!-- Блок обложки слева -->
         <ImageButton
             android:id="@+id/btnBack"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Назад"
             android:src="@drawable/ic_arrow_back"
             app:tint="#5081E2" />
 
-        <!-- Блок обложки слева -->
         <LinearLayout
             android:id="@+id/coverContainer"
             android:layout_width="150dp"
@@ -120,7 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="37dp"
                     android:contentDescription="Выберите статус книги"
-                    android:hint="Статус книги"
+                    android:hint="Выберите статус книги"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -142,6 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:imeOptions="actionDone"
+                    android:hint="Количество прочитанных страниц"
                     android:inputType="number" />
 
                 <!-- Кнопка сохранения с иконкой -->
