--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,5 @@
     <style name="RatingBar" parent="Theme.AppCompat">
     <item name="colorControlNormal">@color/gray</item>
     <item name="colorControlActivated">@color/yellow</item>
-</style></resources>
+</style>
+   </resources>
