--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -85,19 +85,18 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextAuthor" />
 
     <Button
-        android:id="@+id/buttonAddBook"
-        android:layout_width="234dp"
-        android:layout_height="63dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#5081E2"
-        android:gravity="center"
-        android:text="Добавить книгу"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-
-        /> <!-- Добавлено для отступа снизу -->
+    android:id="@+id/buttonAddBook"
+    style="@style/AddBookButton"
+    android:backgroundTint="#5081E2"
+    android:textColor="@android:color/white"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
+    android:layout_marginBottom="32dp"
+    android:text="Добавить книгу"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/><!-- Добавлено для отступа снизу -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
