--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,9 @@
     <item name="colorControlNormal">@color/gray</item>
     <item name="colorControlActivated">@color/yellow</item>
 </style>
+    <style name="AddBookButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textSize">18sp</item>
+        <item name="android:minHeight">64dp</item>
+        <item name="cornerRadius">32dp</item>
+    </style>
    </resources>
