реализация BookDetailsActivity.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
 
     <!-- Поиск -->
     <EditText
+
         android:id="@+id/editTextSearch"
+        android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -43,13 +45,13 @@
         <!-- Кнопки фильтров остаются без изменений -->
         <Button
             android:id="@+id/buttonRead"
-            android:layout_width="0dp"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Прочитано"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:textColor="@android:color/white"
-            android:contentDescription="Показать прочитанные книги" />
+            android:contentDescription="Показать прочитанные книги"
+            android:text="Прочитано"
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/buttonInProcess"
