--- a/app/src/main/res/layout/read.xml
+++ b/app/src/main/res/layout/read.xml
@@ -140,6 +140,7 @@
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
             <!-- Добавьте этот блок после statusDropdown и перед полем для ввода прочитанных страниц -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -235,14 +236,18 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/progressBarReading"
             android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:backgroundTint="#5081E2"
             android:enabled="false"
             android:text="Добавить краткое содержание"
             android:textColor="@android:color/white" />
 
+        <!-- Кнопка удаления книги -->
         <!-- Поле для краткого содержания -->
+
         <LinearLayout
             android:id="@+id/summaryContainer"
             android:layout_width="match_parent"
@@ -271,5 +276,20 @@
                 android:minLines="5"
                 android:background="@android:drawable/editbox_background"/>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnDeleteBook"
+            android:layout_width="365dp"
+            android:layout_height="42dp"
+            android:layout_below="@+id/btnAddSummary"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="165dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="#FF3B30"
+            android:text="Удалить книгу"
+            android:textColor="@android:color/white" />
+
     </RelativeLayout>
+
 </ScrollView>
